fix overflow issue and add contact page

--- a/src/layouts/PageLayout/PageLayout.module.scss
+++ b/src/layouts/PageLayout/PageLayout.module.scss
@@ -14,15 +14,18 @@
   height: 50%;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .sectionOne {
-  left: 0;
+  position: absolute;
+  top: 0;
 }
 
 .sectionTwo {
-  left: 50%;
+  position: absolute;
   background-color: #f0f0f0;
+  top: 50%;
 }
 
 @include breakpoints.md {
@@ -32,5 +35,13 @@
   .section {
     width: 50%;
     height: 100%;
+  }
+  .sectionOne {
+    left: 0;
+    top: 0;
+  }
+  .sectionTwo {
+    left: 50%;
+    top: 0;
   }
 }
