--- a/src/pages/ContactPage/ContactPage.module.scss
+++ b/src/pages/ContactPage/ContactPage.module.scss
@@ -1,4 +1,5 @@
 @use "../../styles/breakpoints.scss";
+@use "../../styles/colors.scss";
 
 .left {
   color: #222;
@@ -7,7 +8,7 @@
   .title {
     font-weight: bold;
     font-size: 6rem;
-    text-shadow: 4px 4px #ffa19e;
+    text-shadow: 4px 4px colors.$purple;
     text-align: center;
   }
   .alignRight {
