--- a/src/pages/ProjectsPage/ProjectsPage.module.scss
+++ b/src/pages/ProjectsPage/ProjectsPage.module.scss
@@ -22,7 +22,6 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  width: 30vw;
   vertical-align: center;
   color: #738b99;
   font-size: 1rem;
@@ -34,10 +33,6 @@
   .left {
     .title {
       font-size: 8rem;
-    }
-    .jello-text {
-      padding-top: 48px;
-      font-size: 20vw;
     }
   }
 }
